*gitlab-ce-9.3.5 (08 Jul 2017)

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/gitlab-9.3.5-sidekiq.init, +files/gitlab-9.3.5-unicorn.init,
  +gitlab-ce-9.3.5.ebuild:
  www-apps/gitlab-ce:  Add ebuild for gitlab-ce-9.3.5

*gitlab-ce-9.2.7 (08 Jul 2017)

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.2.7.ebuild,
  -gitlab-ce-9.2.6.ebuild:
  www-apps/gitlab-ce:  Add ebuild for GitLab 9.2.7

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.10.ebuild,
  gitlab-ce-9.1.7.ebuild, gitlab-ce-9.2.6.ebuild, gitlab-ce-9.3.0_rc2.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Follow rename of gitaly -> gitlab-gitaly

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Update version 9999

*gitlab-ce-9.3.0_rc2 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/04-gitlab-ce-9.3.0-fix-check-task.patch, +gitlab-ce-9.3.0_rc2.ebuild,
  -gitlab-ce-9.2.0_rc7.ebuild:
  www-apps/gitlab-ce:  Update 9.2.0_rc7 -> 9.3.0_rc2

*gitlab-ce-9.2.6 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.2.6.ebuild,
  -gitlab-ce-9.2.2.ebuild:
  www-apps/gitlab-ce:  Update 9.2.2 -> 9.2.6

*gitlab-ce-9.1.7 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.1.7.ebuild,
  -gitlab-ce-9.1.4-r1.ebuild:
  www-apps/gitlab-ce:  Update 9.1.4-r1 -> 9.1.7

*gitlab-ce-9.0.10 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.10.ebuild,
  -gitlab-ce-9.0.7.ebuild:
  www-apps/gitlab-ce:  Update 9.0.7 -> 9.0.10

*gitlab-ce-9.0.7 (25 May 2017)

  25 May 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.7.ebuild:
  www-apps/gitlab-ce:  added ebuild for Gitlab CE 9.0.7

*gitlab-ce-9.0.2 (30 Mar 2017)

  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.2.ebuild:
  www-apps/gitlab-ce:  added ebuild for Gitlab CE 9.0.2

  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild: