@@ -34,7 +34,7 @@ EBUILD gitlab-ce-9.0.10.ebuild 13094 SHA256 3095dbce78328f513eaf599486af63ae3836
 EBUILD gitlab-ce-9.1.7.ebuild 13250 SHA256 be342467f79215ec736c6d1f4d9d26bb679116f422585cceeac90bdf15dedfec SHA512 eca7584067d438b1feeeb56d7ef765af1f96f3fce8098d32e70e4f706c9572a52ffd7d4594c949234a1d25e9f52b220892d656afce4b30ca32ebe51665d0326c WHIRLPOOL 27d89d8d86c583da924bdac4f6db7216be151a55d5b14f7a78dd77417cd643c506c1c2ec652e234df7763472a0cad21794645dd85cfb404276179721649d4077
 EBUILD gitlab-ce-9.2.7.ebuild 12995 SHA256 93cb032967c0388d706be2dda0cfca2ca4765c0774e283ab0d61769cf43ddea6 SHA512 b8ecb0a4cc893786d4cd2dd94d53a21c6a8fbec5d181843286584914363f1160361dccfe2f61487f6744f7fb4d42a5efc4085e64bca7b29dea7e4672788c49cf WHIRLPOOL 2d8ada573da9e209e7a0bf3f05aef83e2419c18f4406b3abdbb24a90b488acdbdf7d4406b665a92356b457d100dd46c2a39084f87ba90b23da87392f2f98beb4
 EBUILD gitlab-ce-9.3.0_rc2.ebuild 12829 SHA256 6951949f8d98f867746a0128e99ce3baabddecdaa45952565f38a913b2868058 SHA512 3337e413db8680d0d177099425a71c2410afdec9130d57f9c910770aeb12dd7a13c410782f41f8a0cd24d243534d513b66ec4d93eb09c7e15896716863682eb0 WHIRLPOOL 6b9d03912224808065b3bc301f9ce7b82925293db2916cdeb3184b28c0d58fc034b06dda6b43109b251c942d3b4bebd0c4e6bde7c644630baaece585c35ae6d3
-EBUILD gitlab-ce-9.3.5.ebuild 12828 SHA256 88e5bbb069524fa1cb38dce77bd6338f0c7e9474cf733051953340ab25ee6692 SHA512 a15e5d2ba38ae7438978030c52cc91e41cb1ac3bf7a805b97c8e3a17d49c15bd784c8f0024ddd68074f371501e73469b6c5f974741764775b0614736e3e8253b WHIRLPOOL b56a2815557ff59234596fdbd2e20d75c8ea6441eb8d51e5da7dcc92e05b4e56576a74f930d3aa008358389dc06e00efd15ffabb273fb9c87d878a7ebe64bd19
+EBUILD gitlab-ce-9.3.5.ebuild 13520 SHA256 cfcd736f83d18a272e2e357ce8061114cd9f2e464123bcd777d4bd78e3817d2a SHA512 50e4a6f601cca72f8d5acb85e8ea45568c587aea75d7797c105e6340244fa545644ecf5e9d74636e85d3a251d6e4c6b746d67d9c904dc6f7999e8760721456b4 WHIRLPOOL 8c25b3ac505638c92c81eaa418eadeb91243d237a69de449cf906b68dbe59c597cf0ef88e75d5f6c990878088864091d895aa8e8c68b5fb35b8c462039ceed1a
 EBUILD gitlab-ce-9999.ebuild 12789 SHA256 27db871b7d51cae37b6802043c82887bb810c1183682ce6c7efe0dc546d9b29e SHA512 99ca91ab0b8045d8bc2cd9d4208ecd4e8eb96c3d01afe49d119bb5677ee88f5f700042f502ab0c446f7acaaaeb7b9758c6d721a91f256eea335eb744a05a4b27 WHIRLPOOL a1e812d1d9562e7febee89e5c847ea0febec360aee38efc5cf779e45b92bb73eff3f066eb90fb96c292e8cfdc2a322bc9222a786796ac0470a221e44369a3270
-MISC ChangeLog 19435 SHA256 c81d395d1c8f83931097bc34df25dcbda8e6351186baf397df8eb4051bbc1616 SHA512 1524cbe46461c1a9672213f54dbbf4243a7b5379253401fe87aba17e23eae7a6f2b0709a49afcc24f963d4591637a7fc969406b98fb3e80200440de95a1b2390 WHIRLPOOL 94d7ba2ae1aad389da9142d3cca03e1853223fd564d17af643dc0bc336975237e11536f74a278815c59e027950cd35a2122b1244f2a3e598d11ebbedee5958b9
+MISC ChangeLog 19563 SHA256 adc16d58188a1ebdc02c0a7e97a26c8a3e5d909ba16804fea007396f90457863 SHA512 2292d42bf70ad33e1f2ac34165d6469601d4c0f445758112fb2c3b3ff586832f9cb058d3d4f58f3941d6ca489dc3b8440ad2d873bd7a540fb9617984ec97ec33 WHIRLPOOL 4c242476fab20e63b9c2ef587ff4987468a8f5d7542b68e6e670609d16d9de860598e500c68f20cc95b3b1bf056249085964776a1737b10c4215b22ff744422e
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
