@@ -1,3 +1,6 @@
+  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.3.5.ebuild:
+  www-apps/gitlab-ce:  Fix some bugs in the ebuild.
+
 *gitlab-ce-9.3.5 (08 Jul 2017)
 
   08 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
